# sis-model

./: .envrc  .gitignore  Makefile  README.md  go.mod  mps-slides.md  msz-slides.md  pyproject.toml
cmd/: main.go
cmd/threshold/: main.go
configs/: ba-beta-gamma.json  ba-beta.json  ba-classic-max.json  ba-classic-min.json  ba-classic-rand.json  ba-gamma.json  beta-and-gamma.json  beta.json  classic-er.json  classic.json  er-beta-gamma.json  er-beta.json  er-classic-max.json  er-classic-min.json  er-classic-rand.json  er-gamma.json  gamma.json
internal/networks/: networks.go
plot/: common.py  plot_infected_vs_ratio.py  plot_infected_vs_step.py  plot_max_min_rnd.py  plot_si_vs_steps.py  plot_x_vs_y.py
report/: main.aux  main.fdb_latexmk  main.fls  main.tex
run/: average_by  average_last_10  find_plateau  find_threshold  run_infected_vs_ratio  run_infected_vs_step  run_max_min_rnd  run_threshold_vs_k  run_tmax_vs_k
