[tool.poetry]
name = "plot"
version = "0.1.0"
description = ""
authors = ["davkk <dadulerk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyplot-themes = "^0.2.2"
scienceplots = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
